--- a/style.css
+++ b/style.css
@@ -3,13 +3,18 @@
     margin: 0%;
 }
 body{
-    background-color: aquamarine;
+   box-sizing: border-box;
+   width: 100%;
+
 }
 header{
     width: 100%;
+    
 }
-#nav{
-    width: 100%;
+nav{
+    width: 95%;
+    margin: 10px;
     display: flex;
     justify-content: space-between;
+   
 }
