--- a/style.css
+++ b/style.css
@@ -1,20 +1,34 @@
 *{
     padding: 0%;
     margin: 0%;
+    box-sizing: border-box;
 }
 body{
-   box-sizing: border-box;
+   
    width: 100%;
+   background-color: hsl(193, 100%, 96%);
 
 }
 header{
     width: 100%;
+    background-image: url("images/bg-hero-desktop.svg") ;
+    padding: 30px;
+   
     
 }
 nav{
     width: 95%;
-    margin: 10px;
+    padding: 20px;
     display: flex;
-    justify-content: space-between;
-   
+    justify-content: space-between;  
+}
+#nav_logo>img{
+    width: 75%;
+}
+#nav_button{
+    background-color:  white;
+    width: 200px;
+    padding: 15px;
+    text-align: center;
+    border-radius: 50px;
 }
