--- a/style.css
+++ b/style.css
@@ -66,3 +66,24 @@ nav{
     border-radius: 50px;
     padding: 20px;
 }
+#section2{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+}
+#part{
+    width: 60%;
+    margin: 30px;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    justify-content: space-between;
+}
+#image{
+    width: 40%;
+}
+#part>img{
+    width:40%;
+}
