--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ nav{
     padding: 15px;
     text-align: center;
     border-radius: 50px;
+    cursor: pointer;
 }
 #section1{
     display: flex;
@@ -64,26 +65,41 @@ nav{
     text-align: center;
     width: 40%;
     border-radius: 50px;
-    padding: 20px;
+    padding: 15px;
+    color: aliceblue;
+    cursor: pointer;
 }
 #section2{
     display: flex;
     width: 100%;
+    margin-top: 100px;
     flex-direction: column;
     justify-items: center;
     align-items: center;
 }
 #part{
-    width: 60%;
-    margin: 30px;
+    border: 0px solid black;
+    box-shadow: 0.5px 0.5px 5px 0.7px #888888;
+    border-radius: 10px;
+    width: 70%;
+    margin: 15px;
     display: flex;
     justify-items: center;
     align-items: center;
     justify-content: space-between;
 }
-#image{
-    width: 40%;
-}
 #part>img{
-    width:40%;
+    width:50%;
+    padding: 5%;
+}
+#part:nth-child(2){
+    flex-direction: row-reverse;
+}
+.summary{
+    width: 50%;
+    text-align: left;
+    padding: 40px;
+}
+.summary>h1 , p{
+    margin: 15px;
 }
