--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ nav{
 #summary_button{
     background-color: hsl(322, 100%, 66%);
     text-align: center;
-    width: 40%;
+    width: 50%;
     border-radius: 50px;
     padding: 15px;
     color: aliceblue;
@@ -81,7 +81,7 @@ nav{
     border: 0px solid black;
     box-shadow: 0.5px 0.5px 5px 0.7px #888888;
     border-radius: 10px;
-    width: 70%;
+    width: 80%;
     margin: 15px;
     display: flex;
     justify-items: center;
@@ -102,4 +102,75 @@ nav{
 }
 .summary>h1 , p{
     margin: 15px;
+}
+h1{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700px;
+}
+p{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400px;
+}
+#footer{
+    display: grid;
+    grid-template-columns: 3fr 1fr 1fr 1fr;
+    grid-row: 1fr 1fr;
+    background-color:  hsl(192, 100%, 9%);
+    padding: 200px 20px 0px 20px;
+}
+#newsletter{
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    flex-direction: column;
+    width: 50%;
+    padding: 50px;
+    margin: 100px 0px -100px 0px;
+    box-shadow: 0.5px 0.5px 5px 0.7px #888888;
+    background-color: white;
+    
+}
+.summary_button{
+    background-color: hsl(322, 100%, 66%);
+    text-align: center;
+    width: 50%;
+    border-radius: 50px;
+    margin: 10px;
+    padding: 5px;
+    color: aliceblue;
+    cursor: pointer;
+}
+.copyright{
+    text-align: left;
+    color: white;
+    width: 100%;
+   
+}
+.logo>img{
+    width: 20%;    
+}
+.location{
+    display: flex;
+    justify-items: center;
+    align-items: flex-start;
+    padding: 10px;
+}
+.location>div>p{
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
+    color: white;
+    font-size: 12px;
+}
+.location>div{
+   margin: 10px;
+}
+#column{
+    display: flex;
+    flex-direction: column;
+    color: white;
+}
+#social>img{
+width: 10%;
+margin: 10px;
 }
